# backend/internal/server/routers/files.go
@@ -2,22 +2,13 @@ package routers
 
 import (
 	"toggo/internal/controllers"
-	"toggo/internal/services"
 	"toggo/internal/types"
 
 	"github.com/gofiber/fiber/v2"
 )
 
 func FileRoutes(apiGroup fiber.Router, routeParams types.RouteParams) fiber.Router {
-	awsCfg := &routeParams.ServiceParams.Config.AWS
-	fileService := services.NewFileService(services.FileServiceConfig{
-		PresignClient: awsCfg.PresignClient,
-		S3Client:      awsCfg.S3Client,
-		ImageRepo:     routeParams.ServiceParams.Repository.Image,
-		BucketName:    awsCfg.BucketName,
-		Region:        awsCfg.Region,
-	})
-	fileController := controllers.NewFileController(fileService, routeParams.Validator)
+	fileController := controllers.NewFileController(routeParams.ServiceParams.FileService, routeParams.Validator)
 
 	// /api/v1/files
 	fileGroup := apiGroup.Group("/files")
@@ -32,6 +23,9 @@ func FileRoutes(apiGroup fiber.Router, routeParams types.RouteParams) fiber.Rout
 	// Get file endpoints (returns presigned download URLs for confirmed uploads)
 	fileGroup.Get("/:imageId/:size", fileController.GetFile)
 	fileGroup.Get("/:imageId", fileController.GetFileAllSizes)
+
+	// Delete image
+	fileGroup.Delete("/:imageId", fileController.DeleteImage)
 
 	return fileGroup
 }
